--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -15,6 +15,10 @@
     h2#comments Комментарии
     - if user_signed_in?
       
+      span.comments__form-response-label
+        = t('.comment_response')
+      span.comments__form-response-id
+
       = form_for :comment, url: comments_path, method: :post, html: {class: 'comments-form'} do |f|
         = hidden_field_tag 'comment[resource_type]', params['controller']
         = hidden_field_tag 'comment[resource_id]', @post.id
@@ -29,9 +33,19 @@
       - else
         - @post.comments.each do |comment|
           .comment
+            .comment-header
+              span.comment-header__id
+                => "##{comment.id}"
+              span.comment-header__response
+                = t('.comment_response')
+              span.comment-header__response-id
             .comment__message
               = comment.message
             .comment-info
+              .comment-info__comment-id
+                = comment.id
+              a.comment-info__response-link href='#comments'
+                = t('.comment_response_link')
               .comment-info__date
                 = comment.created_at.strftime("%d.%m.%Y %H:%M")
               .comment-info__author
