Add jQuery skill

--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -146,6 +146,12 @@ nav
           = inline_svg('bootstrap.svg', size: '96', class: 'skill__image')
           progress.skill__progress value="60" max="100" 60%
           figcaption.centered Bootstrap
+
+      .skill
+        figure
+          = inline_svg('jquery.svg', size: '96', class: 'skill__image')
+          progress.skill__progress value="15" max="100" 15%
+          figcaption.centered jQuery
     
     h4 = t('.skills_content.vcs')
     .skills
