Add under construction warning

--- a/app/assets/stylesheets/blog/variables.sass
+++ b/app/assets/stylesheets/blog/variables.sass
@@ -4,5 +4,8 @@ $title-color: #B3001B
 $background-color: #F5E9E2
 $link-color: #255C99
 $label-color: #7EA3CC
+$warning-color: rgba(242, 44, 0, 0.9)
+$light-text: rgb(255, 255, 255)
+$light-link: rgb(255, 255, 255)
 
 $post-background: rgb(255, 249, 249)
