--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,8 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body.body
     = render partial: 'shared/header'
+    = render partial: 'shared/under-construction'
     main
       = yield
     = render partial: 'shared/ga'
+    
