[55] Add report page

--- a/app/views/shared/_under-construction.html.slim
+++ b/app/views/shared/_under-construction.html.slim
@@ -1,4 +1,4 @@
 .under-construction
   => t('under_construction')
-  a.link_light href="/report"
-    = t('report')
+
+  = link_to t('report'), new_report_path, class: 'link_light'
