--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,8 +1,7 @@
 header.header.header_shadowed
 
   .header__left-side.header__left-side_uppercase
-    // logo
-    = link_to image_tag('logo.jpg', class: 'site-logo', size: '36'), root_path
+    = link_to inline_svg('logo.svg', class: 'site-logo', size: '48'), root_path
 
     .divider.w10px
 
