[61] Some html/css refactoring

--- a/app/assets/stylesheets/blog/global-modifiers.sass
+++ b/app/assets/stylesheets/blog/global-modifiers.sass
@@ -1,7 +1,12 @@
 // I kniw this is not BEM-style but I'd rather collect such kinds of modifiers in one file
+html
+  font-size: 20px
 
 .w10px
   width: 10px
+
+.w2vw
+  width: 2vw
 
 .pointered
   cursor: pointer
