--- a/app/assets/stylesheets/blog/header/header.sass
+++ b/app/assets/stylesheets/blog/header/header.sass
@@ -1,8 +1,7 @@
 .header
-  height: 64px
+  height: 10vh
   background-color: $header-color
   display: flex
   justify-content: space-between
   align-items: center
-  padding-left: 20px
-  padding-right: 20px
+  padding: 1vh 5vw
