--- a/app/assets/stylesheets/blog/search-form/search-form__input/search-form__input.sass
+++ b/app/assets/stylesheets/blog/search-form/search-form__input/search-form__input.sass
@@ -1,5 +1,7 @@
 .search-form__input
   opacity: 0
   width: 0
+  height: 5vh
+  font-size: 1rem
   transition-property: opacity, width
   transition-duration: 0.5s
