--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -1,1 +1,27 @@
+.language-switcher
+  = inline_svg('ru.svg', class: 'language-switcher__icon')
 
+nav
+  ul.nav
+    li About me
+    li Skills
+    li Projects
+    li Links
+    li Contacts
+
+/ .hint
+/   = t('click')
+
+/ = image_tag('iceberg.jpg')
+
+/ .aspects
+    / object type="image/svg+xml" data="aspects/ni.svg"
+    /   | Your browser does not support SVGs
+  /   = inline_svg('aspects/ni.svg', class: 'aspects__icon')
+  /   = inline_svg('aspects/te.svg', class: 'aspects__icon')
+  /   = inline_svg('aspects/fe.svg', class: 'aspects__icon')
+  /   = inline_svg('aspects/se.svg', class: 'aspects__icon')
+  /   = inline_svg('aspects/si.svg', class: 'aspects__icon')
+  /   = inline_svg('aspects/fi.svg', class: 'aspects__icon')
+  /   = inline_svg('aspects/ne.svg', class: 'aspects__icon')
+  /   = inline_svg('aspects/ti.svg', class: 'aspects__icon')
