--- a/app/assets/stylesheets/application/body/body.sass
+++ b/app/assets/stylesheets/application/body/body.sass
@@ -1,9 +1,8 @@
 .body
   margin: 0
   padding: 0
-  height: 80vh
-  // background-image: url('iceberg.jpg'), linear-gradient(#eb01a5, #d13531)
-  // background: linear-gradient(-40deg,#222,transparent,#111) repeat, url('iceberg.jpg') no-repeat
+  height: 100vh
   background-color: $page-background
   background-image: url('iceberg.jpg')
   background-repeat: no-repeat
+  background-size: cover
