[68] Add About section

--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -4,7 +4,7 @@
 nav.nav
   ul.nav-list
     li.nav-list__item
-      a.nav-list__link href="#"
+      a.nav-list__link href="/#about"
         | About me
     li.nav-list__item
       a.nav-list__link href="#"
@@ -18,6 +18,15 @@ nav.nav
     li.nav-list__item
       a.nav-list__link href="#"
         | Contacts
+
+section
+  .bg.bg_hello
+
+.divider
+  h2#about.divider__title About me
+
+section
+  .bg.bg_skills
 
 / .hint
 /   = t('click')
