--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,8 +3,9 @@ html
   head
     title Ȿaff'a
     = csrf_meta_tags
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = yield :main_page
+    = yield :links
+    meta name="viewport" content="width=device-width, initial-scale=1"
   body.body
     main.main
       = yield
