--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -1,3 +1,6 @@
+= content_for :main_page
+  = stylesheet_link_tag 'application', media: 'all'
+
 .language-switcher
   = inline_svg('flags/ru.svg', class: 'language-switcher__icon')
 
