[72] Add some text to hello section

--- a/app/assets/stylesheets/variables.sass
+++ b/app/assets/stylesheets/variables.sass
@@ -1,3 +1,4 @@
 $page-background: rgb(1, 37, 54)
 $divider-background: rgb(0, 2, 48)
 $divider-title: rgb(163, 197, 255)
+$light-text: rgb(237, 252, 255)
