--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -24,6 +24,8 @@ nav.nav
 
 section
   .bg.bg_hello
+    h1.hello-heading Hi! I'm Andrew
+    span.tip-text Scroll down to learn more about me
 
 .divider
   h2#about.divider__title About me
