--- a/app/assets/stylesheets/application/nav-list/nav-list__link/nav-list__link.sass
+++ b/app/assets/stylesheets/application/nav-list/nav-list__link/nav-list__link.sass
@@ -1,7 +1,6 @@
 .nav-list__link
   text-decoration: none
-  color: white
-  text-shadow: 1px 1px 2px black
+  @include light-text
 
   &:hover
     color: rgb(3, 70, 112)
