--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -2,7 +2,10 @@
   = stylesheet_link_tag 'application', media: 'all'
 
 .language-switcher
-  = inline_svg('flags/ru.svg', class: 'language-switcher__icon')
+  = inline_svg "flags/#{params[:locale]}.svg", class: 'language-switcher__icon'
+  .language-switcher__content
+    - (Saffa::Application.config.i18n.available_locales).each do |language|
+      = link_to inline_svg("flags/#{language}.svg", class: 'language-switcher__icon'), url_for( :locale => language.to_s )
 
 nav.nav
   ul.nav-list
