--- a/app/assets/stylesheets/application/nav-list/nav-list__item/nav-list__item.sass
+++ b/app/assets/stylesheets/application/nav-list/nav-list__item/nav-list__item.sass
@@ -4,3 +4,23 @@
   font-size: 1.3rem
   margin-bottom: 5px
   text-transform: uppercase
+
+@media (max-width: 900px)
+  .nav-list__item
+    font-size: 1.2rem
+
+@media (max-width: 700px)
+  .nav-list__item
+    font-size: 1.1rem
+
+@media (max-width: 600px)
+  .nav-list__item
+    font-size: 1rem
+
+@media (max-width: 500px)
+  .nav-list__item
+    font-size: 0.9rem
+
+@media (max-width: 400px)
+  .nav-list__item
+    font-size: 0.8rem
