--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title = "Ȿaff'a - #{yield :title}"
+    title = "Ȿaff'a #{yield :title}"
     = csrf_meta_tags
     = yield :main_page
     = yield :links
