--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -11,19 +11,19 @@ nav.nav
   ul.nav-list
     li.nav-list__item
       a.nav-list__link href="/#about"
-        | About me
+        = t('.about_me')
     li.nav-list__item
       a.nav-list__link href="/#skills"
-        | Skills
+        = t('.skills')
     li.nav-list__item
       a.nav-list__link href="/#projects"
-        | Projects
+        = t('.projects')
     li.nav-list__item
       a.nav-list__link href="/#links"
-        | Links
+        = t('.links')
     li.nav-list__item
       a.nav-list__link href="/#contacts"
-        | Contacts
+        = t('.contacts')
 
 section
   .bg.bg_hello
