--- a/app/views/application/links.html.slim
+++ b/app/views/application/links.html.slim
@@ -18,7 +18,7 @@
   'Основы отзывчивого веб-дизайна' => 'https://developers.google.com/web/fundamentals/design-and-ui/responsive/?hl=ru',
   'БЭМ' => 'https://ru.bem.info/methodology/quick-start/',
   'Bootstrap 4' => 'https://v4-alpha.getbootstrap.com/getting-started/introduction/',
-  'Material Design' => 'https://material.io/'
+  'Material Design' => 'https://material.io/',
   }
 
 - css_processors_links = { 'Sass Docs' => 'http://sass-lang.com/documentation/file.SASS_REFERENCE.html',
@@ -140,11 +140,10 @@
           li
             = link_to key, value
 
-- ror_links = { 'CSS-live' => 'http://css-live.ru/',
-  'CSS tricks' => 'https://css-tricks.com/',
-  'w3schools' => 'https://www.w3schools.com/',
-  'Specky Boy' => 'https://speckyboy.com/',
-  }
+/ - ror_links = { 'CSS-live' => 'http://css-live.ru/',
+/   'CSS tricks' => 'https://css-tricks.com/',
+/   'w3schools' => 'https://www.w3schools.com/',
+/   'Specky Boy' => 'https://speckyboy.com/', }
 
 
   .links__column.links__column_back
@@ -158,10 +157,10 @@
             = link_to key, value
 
 
-- db_links = { 'Neo4j Cypher cheat sheet' => 'https://neo4j.com/docs/cypher-refcard/current/',
-  'ArangoDB Docs' => 'https://docs.arangodb.com/3.1/Manual/index.html',
-  'OrientDB Docs' => 'http://orientdb.com/docs/last/index.html',
-  }
+/ - db_links = { 'Neo4j Cypher cheat sheet' => 'https://neo4j.com/docs/cypher-refcard/current/',
+/   'ArangoDB Docs' => 'https://docs.arangodb.com/3.1/Manual/index.html',
+/   'OrientDB Docs' => 'http://orientdb.com/docs/last/index.html',
+/   }
 
   .links__column.links__column_db
     h2.links__title Databases
