--- a/app/assets/stylesheets/application/bg/bg.sass
+++ b/app/assets/stylesheets/application/bg/bg.sass
@@ -1,7 +1,11 @@
 .bg
-  z-index: 0
-  height: 100vh
-  width: 100%
+  position: absolute
+  left: 0
+  top: 0
+  z-index: -1
+  height: 100%
+  width: 100vw
   overflow: hidden
   background-repeat: no-repeat
   background-size: cover
+  display: none
