--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -1,61 +1,57 @@
 = content_for :main_page
   = stylesheet_link_tag 'application', media: 'all'
 
-.language-switcher
-  = inline_svg "flags/#{params[:locale]}.svg", class: 'language-switcher__icon'
-  .language-switcher__content
+.language-switch
+  = inline_svg "flags/#{params[:locale]}.svg", class: 'language-switch__icon'
+  .language-switch__content
     - (Saffa::Application.config.i18n.available_locales).each do |language|
-      = link_to inline_svg("flags/#{language}.svg", class: 'language-switcher__icon'), url_for( :locale => language.to_s )
+      = link_to inline_svg("flags/#{language}.svg", class: 'language-switch__icon'), url_for( :locale => language.to_s )
 
-nav.nav
-  ul.nav-list
-    li.nav-list__item
-      a.nav-list__link href="/#about"
-        = t('.about_me')
-    li.nav-list__item
-      a.nav-list__link href="/#skills"
-        = t('.skills')
-    li.nav-list__item
-      a.nav-list__link href="/#projects"
-        = t('.projects')
-    li.nav-list__item
-      a.nav-list__link href="/#links"
-        = t('.links')
-    li.nav-list__item
-      a.nav-list__link href="/#contacts"
-        = t('.contacts')
+/ hello section
+label.label-switch.nav-link for='hello_radiobox'
+  span.label-switch__icon = inline_svg('icons/hello.svg')
+  span.label-switch__text = t('.hello')
+input#hello_radiobox.radiobox-switch.radiobox-switch_hello type='radio' name='section' checked='checked'
 
-section
-  .bg.bg_hello
-    h1.hello-heading Hi! I'm Andrew
-    span.tip-text Scroll down to learn more about me
+section.bg.bg_hello
+  h1.hello-heading = t('.hello_text')
 
-.divider
-  h2#about.divider__title About me
+/ about_me section
+label.label-switch.nav-link for='about_me_radiobox'
+  span.label-switch__icon = inline_svg('icons/about_me.svg')
+  span.label-switch__text = t('.about_me')
+input#about_me_radiobox.radiobox-switch.radiobox-switch_about-me type='radio' name='section'
 
-section
-  .bg.bg_about
+.bg.bg_about-me
 
-.divider
-  h2#skills.divider__title Skills
+/ skills section
+label.label-switch.nav-link for='skills_radiobox'
+  span.label-switch__icon = inline_svg('icons/skills.svg')
+  span.label-switch__text = t('.skills')
+input#skills_radiobox.radiobox-switch.radiobox-switch_skills type='radio' name='section'
 
-section
-  .bg.bg_skills
+.bg.bg_skills
 
-.divider
-  h2#projects.divider__title Projects
+/ projects section
+label.label-switch.nav-link for='projects_radiobox'
+  span.label-switch__icon = inline_svg('icons/projects.svg')
+  span.label-switch__text = t('.projects')
+input#projects_radiobox.radiobox-switch.radiobox-switch_projects type='radio' name='section'
 
-section
-  .bg.bg_projects
+.bg.bg_projects
 
-.divider
-  h2#links.divider__title Links
+/ links section
+label.label-switch.nav-link for='links_radiobox'
+  span.label-switch__icon = inline_svg('icons/links.svg')
+  span.label-switch__text = t('.links')
+input#links_radiobox.radiobox-switch.radiobox-switch_links type='radio' name='section'
 
-section
-  .bg.bg_links
+.bg.bg_links
 
-.divider
-  h2#contacts.divider__title Contacts
+/ contacts
+label.label-switch.nav-link for='contacts_radiobox'
+  span.label-switch__icon = inline_svg('icons/contacts.svg')
+  span.label-switch__text = t('.contacts')
+input#contacts_radiobox.radiobox-switch.radiobox-switch_contacts type='radio' name='section'
 
-section
-  .bg.bg_contacts
+.bg.bg_contacts
