--- a/app/assets/stylesheets/application/label-switch/label-switch.sass
+++ b/app/assets/stylesheets/application/label-switch/label-switch.sass
@@ -1,11 +1,11 @@
 .label-switch
   z-index: 1
   display: inline-block
+  cursor: pointer
   padding: 5px 10px
-  background-color: rgb(0, 73, 96)
+  background-color: $label-switch
 
-@media (max-width: 345px)
+@media (max-width: 360px)
   .label-switch
-    text-align: center
-    width: 16.66667vw
+    width: 14.2857vw
     padding: 0
