--- a/app/assets/stylesheets/application/label-switch/label-switch__icon/label-switch__icon.sass
+++ b/app/assets/stylesheets/application/label-switch/label-switch__icon/label-switch__icon.sass
@@ -1,7 +1,5 @@
 .label-switch__icon
   z-index: 1
-  display: none
 
-@media (max-width: 550px)
-  .label-switch__icon
-    display: inline-block
+  &:hover
+    filter: brightness(0.8)
