--- a/app/assets/stylesheets/variables.sass
+++ b/app/assets/stylesheets/variables.sass
@@ -2,3 +2,5 @@ $page-background: rgb(1, 37, 54)
 $divider-background: rgb(0, 2, 48)
 $divider-title: rgb(163, 197, 255)
 $light-text: rgb(237, 252, 255)
+$label-switch: rgb(0, 73, 96)
+$selected-section: rgb(5, 164, 214)
