[79] Improve hello page

--- a/app/assets/stylesheets/application/label-switch/label-switch.sass
+++ b/app/assets/stylesheets/application/label-switch/label-switch.sass
@@ -4,6 +4,7 @@
   cursor: pointer
   padding: 5px 10px
   background-color: $label-switch
+  text-align: center
 
 @media (max-width: 360px)
   .label-switch
